tests/invalid/invalid03_parse_missing_semicolon.uC
/* Pending invalid test: parse error should be reported cleanly. */
int x

int main() {
    x = 3;
    return 0;
}
